--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #232323;
+  color: white;
 }
 
 code {
